// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Matches snapshots 1`] = `
<a
  aria-current="page"
  class="active"
  href="/"
/>
`;

exports[`Matches snapshots 2`] = `
<a
  aria-current="page"
  class="./__tests__/shared/components/NavLink/styles.scss__navLink__xOJfK8 active"
  href="/"
/>
`;
